--- a/index2.html
+++ b/index2.html
@@ -20,8 +20,8 @@
 </div>
 <div style="overflow:auto">
   <div class="menu">
-    <a href="index1.html">首页</a>
-    <a href="index2.html">第二页</a>
+    <a href="index1.html">第一个样式页面</a>
+    <a href="#">响应式页面</a>
     <a href="#">Link 3</a>
     <a href="css_top.html">回到顶部的特效</a>
   </div>
@@ -32,7 +32,10 @@
   </div>
 
   <div class="right">
+    <h1>H1关于</h1>
     <h2>H2关于</h2>
+    <h3>H3关于</h3>
+    <h4>H4关于</h4>
     <p>普通正文字体。中文、英文Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
   </div>
 </div>
