--- a/index1.html
+++ b/index1.html
@@ -8,8 +8,8 @@
 <body>
 <!-- 目录 -->
 <ul class="navbar">
-  <li><a href="index1.html">首页</a>
-  <li><a href="index2.html">第二页</a>
+  <li><a href="#">第一个样式页面</a>
+  <li><a href="index2.html">响应式页面</a>
   <li><a href="town.html">连接2</a>
   <li><a href="links.html">连接3</a>
 </ul>
